scaletempo: Scale GAP event timestamp and duration like for buffers

https://bugzilla.gnome.org/show_bug.cgi?id=781008